@@ -38,7 +38,8 @@ AAAARecord(Name name, int dclass, long ttl, InetAddress address) {
 
 void
 rrFromWire(DNSInput in) throws IOException {
-	address = InetAddress.getByAddress(in.readByteArray(16));
+	address = InetAddress.getByAddress(name.toString(),
+					   in.readByteArray(16));
 }
 
 void
