@@ -1,5 +1,7 @@
 8/31/2012
 	- Add support for the TLSA record type.
+	- Pass hostnames to InetAddress.getByAddress where possible.
+	  (patch from Ingo Bauersachs <ingo.bauersachs@fhnw.ch>)
 
 11/15/2011
 	- Fix the ZoneTransferIn object to properly report AXFRs; this was
